--- a/.github/workflows/sl_build_n_scan.yml
+++ b/.github/workflows/sl_build_n_scan.yml
@@ -37,6 +37,10 @@ jobs:
       run: .\sl analyze --app shiftleft-csharp-demo --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} --csharp --dotnet-core --sca --cpg netcoreWebapi/netcoreWebapi.csproj
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
+    - name: Sleep for 30 seconds
+      uses: whatnick/wait-action@master
+      with:
+        time: '30s'
     - name: Validate Build Rules
       if: ${{ github.event_name == 'pull_request' }}
       run: 
