--- a/.github/workflows/sl_build_n_scan.yml
+++ b/.github/workflows/sl_build_n_scan.yml
@@ -5,6 +5,7 @@ name: ShiftLeft
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
+  workflow_dispatch:
   push:
     branches:
       - main
